// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Datetime actions Action to set all day 1`] = `
Object {
  "payload": Object {
    "allDay": true,
  },
  "type": "SET_ALL_DAY",
}
`;

exports[`[STORE] - Datetime actions Action to set all day 2`] = `
Object {
  "payload": Object {
    "allDay": false,
  },
  "type": "SET_ALL_DAY",
}
`;

exports[`[STORE] - Datetime actions Action to set the multi day 1`] = `
Object {
  "payload": Object {
    "multiDay": true,
  },
  "type": "SET_MULTI_DAY",
}
`;

exports[`[STORE] - Datetime actions Action to set the multi day 2`] = `
Object {
  "payload": Object {
    "multiDay": false,
  },
  "type": "SET_MULTI_DAY",
}
`;

exports[`[STORE] - Datetime actions Action to set the separator date 1`] = `
Object {
  "payload": Object {
    "separator": " -  ",
  },
  "type": "SET_SEPARATOR_DATE",
}
`;

exports[`[STORE] - Datetime actions Action to set the separator time 1`] = `
Object {
  "payload": Object {
    "separator": " @ ",
  },
  "type": "SET_SEPARATOR_TIME",
}
`;

exports[`[STORE] - Datetime actions Action to set the start time 1`] = `
Object {
  "payload": Object {
    "start": "June 5, 2018 5:00 pm",
  },
  "type": "SET_START_DATE_TIME",
}
`;

exports[`[STORE] - Datetime actions Action to set the start time 2`] = `
Object {
  "payload": Object {
    "end": "June 25, 2018 4:00 pm",
  },
  "type": "SET_END_DATE_TIME",
}
`;

exports[`[STORE] - Datetime actions Action to set the time zone 1`] = `
Object {
  "payload": Object {
    "timeZone": "UTC",
  },
  "type": "SET_TIME_ZONE",
}
`;

exports[`[STORE] - Datetime actions Action to set the time zone label 1`] = `
Object {
  "payload": Object {
    "label": "Modern Tribe",
  },
  "type": "SET_TIMEZONE_LABEL",
}
`;

exports[`[STORE] - Datetime actions Action to set the visibility of the time zone 1`] = `
Object {
  "payload": Object {
    "show": true,
  },
  "type": "SET_TIMEZONE_VISIBILITY",
}
`;

exports[`[STORE] - Datetime actions Action to set the visibility of the time zone 2`] = `
Object {
  "payload": Object {
    "show": false,
  },
  "type": "SET_TIMEZONE_VISIBILITY",
}
`;

exports[`[STORE] - Datetime actions Set Natural Language Label 1`] = `
Object {
  "payload": Object {
    "label": "2 weeks from now",
  },
  "type": "SET_NATURAL_LANGUAGE_LABEL",
}
`;
